fix: increase padding for third section to avoid text overlap

--- a/src/summersplash/index.module.css
+++ b/src/summersplash/index.module.css
@@ -478,6 +478,10 @@ h3 {
     padding-left: 2rem;
   }
 
+  .thirdSection {
+    padding: 2rem 2rem;
+  }
+
   .firstSection .imageBlob {
     bottom: -12rem;
     right: -2rem;
